k8s/base/00-namespace-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hogyoku
  labels:
    app.kubernetes.io/part-of: hogyoku
