k8s/base/20-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: raft-svc
  namespace: hogyoku
  labels:
    app.kubernetes.io/name: raft
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: raft
  ports:
    - name: rpc
      port: 8000
      targetPort: rpc
    - name: health
      port: 8081
      targetPort: health
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: hogyoku
  labels:
    app.kubernetes.io/name: api-gateway
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: http
      port: 8080
      targetPort: http
